<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4" >

        <com.example.dots.view.DrawView
            android:id="@+id/drawiView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.6"
        android:orientation="vertical"
        android:weightSum="1.6" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.4"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center|left" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="3" >

                <EditText
                    android:id="@+id/edt_add_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_edt"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="3"
                    android:maxLines="1"
                    android:padding="3dp" >

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/edt_add_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_edt"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="3dp" />

                <Button
                    android:id="@+id/but_go_add"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_but"
                    android:text="@string/but_go" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.4"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center|left" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="3" >

                <EditText
                    android:id="@+id/edt_delete_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_edt"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="3dp" />

                <EditText
                    android:id="@+id/edt_delete_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_edt"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="3dp" />

                <Button
                    android:id="@+id/but_go_delete"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_but"
                    android:text="@string/but_go" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="0.4"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.5"
                android:gravity="center|left" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/check" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:weightSum="3" >

                <EditText
                    android:id="@+id/edt_check_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_edt"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="3dp" />

                <EditText
                    android:id="@+id/edt_check_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_edt"
                    android:ems="10"
                    android:inputType="number"
                    android:maxLength="3"
                    android:padding="3dp" />

                <Button
                    android:id="@+id/but_go_check"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="1"
                    android:background="@drawable/shape_but"
                    android:text="@string/but_go" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/but_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/shape_but"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/but_back" />

            <Button
                android:id="@+id/but_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/shape_but"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/but_clear"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>